<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="androidx.databinding.ObservableArrayList"/>
        <import type="com.seoul.culture.model.PatrolNfcData"/>
        <variable
                name="patrolList"
                type="ObservableArrayList&lt;PatrolNfcData&gt;"/>

        <variable
                name="view"
                type="com.seoul.culture.scene.patrol.PatrolFragment"/>
        <variable
                name="viewModel"
                type="com.seoul.culture.scene.patrol.PatrolViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

        <androidx.recyclerview.widget.RecyclerView
                android:background="@color/color_main_bg"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                android:padding="1dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/list_patrol"
                android:clipToPadding="false"
                tools:listitem="@layout/item_patrol"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:item="@{patrolList}"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/layout_btn"/>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_btn"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/list_patrol"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
            <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/btn_report"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/report_title"
                    android:textSize="14dp"
                    android:background="@color/color_patrol_btn_report"
                    android:textColor="@color/font_report_btn"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_complete"
                    app:layout_constraintTop_toTopOf="parent"/>

            <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/btn_complete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:text="@string/patrol_complete"
                    android:textSize="14dp"
                    android:background="@color/color_patrol_btn_complete"
                    android:textColor="@color/font_report_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_report"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--
                android:visibility="@{viewModel.startPatrol ? View.VISIBLE : View.GONE}"-->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/color_patrol_nfc_bg"
                app:visibility="@{viewModel.patrolStart}">
            <Button
                    android:id="@+id/btn_start"
                    style="@style/ButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text="@string/patrol_start"
                    android:textSize="18dp"
                    android:background="@drawable/btn_patrol_start"
                    android:textColor="@color/font_report_btn"
                    android:onClick="@{view::onClick}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
<!--    <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:gravity="center"-->
<!--            android:orientation="vertical"-->
<!--            app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
<!--            app:visibility="@{!viewModel.patrolRecycler}">-->
<!--        <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:text="@string/patrol_no_list"/>-->


<!--    </LinearLayout>-->
</layout>